--- a/src/pages/CreatedPlayer/CreatedPlayer.module.css
+++ b/src/pages/CreatedPlayer/CreatedPlayer.module.css
@@ -1,20 +1,12 @@
-.post_container {
+.create_post {
     text-align: center;
 }
 
-.post_container h3 {
-    margin-bottom: .2em;
+.create_post h2 {
+    font-size: 2.2em;
 }
 
-.post_container .tags {
-    display: flex;
-    justify-content: center;
-}
-
-.tags p {
-    margin-right: 1em;
-}
-
-.tags span {
-    font-weight: bold;
+.create_post p {
+    color: #aaa;
+    margin-bottom: 2em;
 }
