--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -1,24 +1,3 @@
-.home {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-
-}
-
-.search_form {
-    max-width: 100%;
-    width: 60%;
-    display: flex;
-    justify-content: center;
-    margin-bottom: 2em;
-}
-
-.search_form input {
-    margin-right: 10px;
-    width: 50%;
-}
-
 .buttom_container {
     width: 85%;
     display: flex;
@@ -36,4 +15,42 @@
     display: block;
     width: 100px;
 
+}
+
+.players {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.player {
+    width: 85%;
+    height: 60px;
+    margin-bottom: 1em;
+}
+
+.player input {
+    display: none;
+}
+
+.button_container {
+    width: 85%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.button {
+    text-align: center;
+
+}
+
+.button a {
+    padding: 10px 0;
+    display: block;
+
+}
+
+.button a,
+.button button {
+    width: 150px;
 }
