--- a/src/index.css
+++ b/src/index.css
@@ -70,7 +70,7 @@ textarea {
   text-align: center;
   cursor: pointer;
   border-radius: 10px;
-  width: 120px;
+  /* width: 120px; */
   font-weight: bold;
   border: none;
   padding: 10px 15px;
