--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,8 +1,15 @@
 .footer {
+    width: 100%;
     height: 35px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     background: #edf3f6;
+    position: fixed;
+    bottom: 0px;
+}
+
+.footer span {
+    font-style: italic;
 }
