--- a/src/components/NavBar/NavBar.module.css
+++ b/src/components/NavBar/NavBar.module.css
@@ -1,10 +1,12 @@
 .navbar {
     display: flex;
+    box-sizing: border-box;
     box-shadow: rgba(0, 0, 0, .15) 0px -2px 10px 0px;
     justify-content: space-between;
     align-items: center;
     padding: .5em 2em;
-    height: 60px;
+    width: 100%;
+    height: 70px;
 }
 
 .brand {
