--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+html {
+  box-sizing: border-box;
+}
+
 body {
   background: #f6fcff;
   padding: 0;
@@ -70,7 +74,6 @@ textarea {
   text-align: center;
   cursor: pointer;
   border-radius: 10px;
-  /* width: 120px; */
   font-weight: bold;
   border: none;
   padding: 10px 15px;
