--- a/src/components/Player/Player.module.css
+++ b/src/components/Player/Player.module.css
@@ -3,7 +3,7 @@
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    height: 100%;
+    height: 60px;
     border: 1px solid #000;
 }
 
