--- a/src/components/Player/Player.module.css
+++ b/src/components/Player/Player.module.css
@@ -4,10 +4,21 @@
     align-items: center;
     width: 100%;
     height: 60px;
-    border: 1px solid #000;
 }
 
 .player span {
     font-size: 2em;
 
+}
+
+.win {
+    width: 100%;
+    height: 60px;
+    display: flex;
+    align-items: center;
+    background: rgb(224, 202, 3);
+}
+
+.win span {
+    margin-left: 1em;
 }
