--- a/src/components/Player/Player.module.css
+++ b/src/components/Player/Player.module.css
@@ -8,17 +8,29 @@
 
 .player span {
     font-size: 2em;
-
 }
 
-.win {
+.win,
+.delete {
     width: 100%;
-    height: 60px;
+    height: 70px;
     display: flex;
     align-items: center;
+}
+
+
+.win {
     background: rgb(224, 202, 3);
+}
+
+.delete {
+    background: #dc3545;
 }
 
 .win span {
     margin-left: 1em;
+}
+
+.delete span {
+    margin-right: 1em;
 }
