--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,6 +1,6 @@
 .footer {
     width: 100%;
-    height: 35px;
+    height: 29px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -12,4 +12,8 @@
 
 .footer span {
     font-style: italic;
+}
+
+.footer {
+    font-size: .7em;
 }
