--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -1,55 +1,12 @@
-.buttom_container {
-    width: 95%;
+.header {
+    width: 100%;
+    height: 38px;
     display: flex;
-    justify-content: space-between;
-}
-
-.buttom {
-    text-align: center;
-
-
-}
-
-.buttom a {
-    padding: 10px 25px;
-    display: block;
-    width: 100px;
-
-}
-
-.players {
-    display: flex;
-    flex-direction: column;
     align-items: center;
-}
-
-.player {
-    width: 95%;
-    height: 100%;
-}
-
-.player input {
-    display: none;
-}
-
-.button_container {
-    width: 85%;
-    display: flex;
     justify-content: space-between;
+    padding: 0 .2em 0 1em;
 }
 
-.button {
-    text-align: center;
-
-}
-
-.button a {
-    padding: 10px 0;
-    display: block;
-
-}
-
-.button a,
-.button button {
-    width: 150px;
+.header h2 {
+    font-size: 1em;
 }
