--- a/src/pages/CreatedPlayer/CreatedPlayer.module.css
+++ b/src/pages/CreatedPlayer/CreatedPlayer.module.css
@@ -1,12 +1,12 @@
-.create_post {
+.create_player {
     text-align: center;
 }
 
-.create_post h2 {
+.create_player h2 {
     font-size: 2.2em;
 }
 
-.create_post p {
+.create_player p {
     color: #aaa;
     margin-bottom: 2em;
 }
